add-drop bot test
