# docs/swagger.json
@@ -117,24 +117,59 @@
                 }
             }
         },
-        "/hello": {
+        "/start-service": {
             "get": {
-                "description": "Hello World",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
+                "description": "Starts the Windows service for BeeHubBot",
                 "tags": [
-                    "Hello"
+                    "Service"
                 ],
-                "summary": "Hello World",
+                "summary": "Start the BeeHubBot service",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Service started",
                         "schema": {
-                            "$ref": "#/definitions/main.MessageResponse"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error starting service",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/stop-service": {
+            "get": {
+                "description": "Stops the Windows service for BeeHubBot",
+                "tags": [
+                    "Service"
+                ],
+                "summary": "Stop the BeeHubBot service",
+                "responses": {
+                    "200": {
+                        "description": "Service stopped",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error stopping service",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -173,14 +208,6 @@
                     }
                 },
                 "scheduleName": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.MessageResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
                     "type": "string"
                 }
             }
